[package]
name = "rouse"
version = "0.1.2"
edition = "2021"
description = "barebones NPM concurrently clone"
license = "MIT"
repository = "https://github.com/jakswa/rouse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
owo-colors = "3.5.0"
fastrand = "1.8.0"
